<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AlbumDetailFragment">

    <data>

        <variable
            name="album"
            type="com.miso.vinilosapp.data.models.Album" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="16dp"
            android:contentDescription="@string/album_detail_go_back_button"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:rotationY="190"
            app:srcCompat="@drawable/ic_arrow"
            app:tint="@color/arrow_color" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp">

            <LinearLayout
                android:id="@+id/albumDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/albumImage"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/album_cover"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/albumTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Titulo cancion" />

                <TextView
                    android:id="@+id/albumGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="Tematica • Genero" />

                <TextView
                    android:id="@+id/albumDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAlignment="center"
                    tools:text="Descripcion" />

                <TextView
                    android:id="@+id/txtCancionesSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:minWidth="56dp"
                    android:minHeight="56dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Canciones" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/songItemRv"
                    android:layout_width="match_parent"
                    android:layout_height="214dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/tracks_list"
                    android:orientation="horizontal"
                    tools:listitem="@layout/song_item" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </FrameLayout>


</layout>
