...
            android:layout_height="180dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/artist_photo"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
...
            android:layout_gravity="bottom|start"
            android:textSize="16sp"
            app:layout_collapseMode="parallax"
            tools:text="Navega los álbumes" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/album_item" />
    </LinearLayout>
</layout>
