<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- AppBarLayout contiene la Toolbar y el contenido que colapsará -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- CollapsingToolbarLayout para el efecto de colapso -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/orange_300"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleMarginBottom="48dp"
            app:titleEnabled="false">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:src="@drawable/bg_detail_orange"
                app:layout_collapseMode="parallax"
                android:layout_gravity="bottom|start"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/img_the_artist"
                android:padding="80dp"
                app:layout_collapseMode="parallax"
                android:layout_gravity="bottom|start" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/collapsing_toolbar_artist_title"
                android:textColor="@color/black"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_collapseMode="parallax"/>

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="bottom|start"
                android:text="@string/collapsing_toolbar_artist_subtitle"
                android:textColor="@color/subtitle"
                android:textSize="16sp"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artistsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/artist_item" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>

