<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="artist" type="com.miso.vinilosapp.data.models.Artist"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_artist"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/artist_cover"
                    android:scaleType="fitXY"
                    tools:src="@drawable/ic_launcher_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_artist_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@{artist.name}"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView_artist"
                        tools:text="Nombre del artista" />

                    <TextView
                        android:id="@+id/textView_artist_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:text="@{artist.description}"
                        tools:text="Description duis aute irure dolor in reprehenderit in voluptate velit.Description duis aute irure dolor in reprehenderit in voluptate velit." />

                    <TextView
                        android:id="@+id/textView_artist_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{artist.birthDate}'
                        android:textSize="12sp"
                        tools:text="1977-02-02" />


                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
