<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="collector"
            type="com.miso.vinilosapp.data.models.Collector" />

    </data>

    <LinearLayout
        android:id="@+id/collectorDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        tools:context=".ui.ArtistDetailFragment">

        <ImageView
            android:id="@+id/backBtnCollector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/collector_detail_go_back_button"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:rotationY="190"
            app:srcCompat="@drawable/ic_arrow_black"
            app:tint="@color/arrow_color" />

        <TextView
            android:id="@+id/collectorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Nombre del Coleccionista" />

        <TextView
            android:id="@+id/collectorInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="3123456789 • carlos.gomez@example.com" />

        <TextView
            android:id="@+id/collector_albums_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginTop="32dp"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_collapseMode="parallax"
            tools:text="Álbumes" />

        <TextView
            android:id="@+id/collector_albums_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:textSize="16sp"
            app:layout_collapseMode="parallax"
            tools:text="Navega por la lista de álbumes"  />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumsCollectorRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/album_item" />
    </LinearLayout>
</layout>